--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/dircproxy.h)
-AM_INIT_AUTOMAKE(dircproxy, 1.0.3)
+AM_INIT_AUTOMAKE(dircproxy, 1.0.4)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
+AM_MAINTAINER_MODE
 
 dnl Checks for programs.
 AC_PROG_AWK
