--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 pkgdata_DATA = \
-	dircproxyrc
+	dircproxyrc.sample
 
 EXTRA_DIST = \
 	$(pkgdata_DATA)
